# Articulation-Estimation

./: CMakeLists.txt  LICENSE  README.md  masking.py
include/: ArticulatedObject.h  ICPModule.h  Sensor.h  main.h  others.h  simultaneous_sa.h
src/: ArticulatedObject.cpp  ICPModule.cpp  Sensor.cpp  main.cpp  others.cpp  simultaneous_sa.cpp
